# environmental-biophysics

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: check.yml  pr.yml  publish_docs_on_github_pages.yml  push_workflow.yml  python-publish.yml  release_workflow.yml
api/gas/: index.html
api/soil/: index.html
api/solar_radiation/: index.html
docs/: index.md
docs/api/: gas.md  soil.md  solar_radiation.md
environmental_biophysics/: environmental_constants.py  gas.py  soil.py  solar_radiation.py
environmental_biophysics/crop_model/: crop_class.py  soil_class.py
src/environmental_biophysics/: solar_radiation.py
tests/: conftest.py
tests/data/: soil_data.csv
