[project]
name = "environmental-biophysics"
dynamic = true
description = "Add your description here"
authors = [
    { name = "Gustavo Camargo", email = "" }
]
dependencies = [
    "numpy~=2.0.1",
]
readme = "README.md"
requires-python = "~= 3.12"

[tool.pdm.version]
source = "scm"

[tool.ruff]
target-version = "py312"
line-length = 120  # use whatever number makes you happy

[tool.ruff.lint]
# https://docs.astral.sh/ruff/rules/
select = [
	"A",    # warn about shadowing built-ins
	"E",    # style stuff, whitespaces
	"F",    # important pyflakes lints
	"I",    # import sorting
	"N",    # naming
	"T100", # breakpoints (probably don't want these in prod!)
]
# if you're feeling confident you can do:
# select = ["ALL"]
# and then manually ignore annoying ones:
# ignore = [...]

[tool.ruff.lint.isort]
# so it knows to group first-party stuff last
known-first-party = ["environmental_biophysics"]

[tool.pyright]
venvPath = "."          # rye installs the venv in the current dir
venv = ".venv"          #       in a folder called `.venv`
typeCheckingMode = "basic"
# strict = ["**/*.py"] use 'strict' checking on all files
pythonVersion = "3.12"  # if library, specify the _lowest_ you support

[tool.pytest.ini_options]
addopts = "--doctest-modules"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.rye]
managed = true
dev-dependencies = [
    "pyright~=1.1.373",
    "pytest~=8.3.2",
]
[tool.rye.scripts]
fmt = "rye fmt"
lint = "rye lint --fix"
check = "pyright"
test = "rye test"
all = { chain = ["fmt", "lint", "check", "test"] }
